[Ref]: MediaMapper 클래스 리팩토링 및 메서드 개선
- MediaMapper 클래스를 리팩토링하여 유틸리티 클래스 형태로 변경하고 인스턴스화를 방지하는 생성자 추가
- TMDB 응답을 처리하는 메서드에서 null 체크 추가 및 코드 일관성 향상
- 중복된 코드 제거 및 메서드 호출을 간소화하여 가독성 개선
- PagedResponse 생성 로직을 개선하여 빈 응답 처리 방식 통일